--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon API/index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
   "engines": {
-    "node": "15.x"
+    "node": "16.x"
   }
 }
