--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nanoid": "^4.0.0"
   },
   "engines": {
     "node": "16.x"
