--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nanoid": "^4.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "nanoid": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "16.x"
