--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "engines": {
