--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "16.x"
